--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-spring/web": "^10.0.3",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.4",
+    "next": "15.5.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "object-to-formdata": "^4.5.1",
