--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@react-spring/web": "^10.0.3",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.3",
+    "@tiptap/extension-text-style": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +44,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
+    "reactjs-tiptap-editor": "^1.0.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
