--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
+    "swiper": "^12.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
