--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
+    "mammoth": "^1.11.0",
     "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -46,6 +47,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
+    "reactjs-tiptap-editor": "^1.0.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
